[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/menus/title.gd" type="Script" id=1]
[ext_resource path="res://themes/playerPanelText.tres" type="Theme" id=2]
[ext_resource path="res://themes/Early GameBoy.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://themes/shop_button.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[node name="title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startButton" type="Button" parent="."]
margin_left = 535.0
margin_top = 174.0
margin_right = 793.0
margin_bottom = 246.0
theme = ExtResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lockButton" type="Button" parent="."]
visible = false
margin_left = 569.0
margin_top = 471.0
margin_right = 755.0
margin_bottom = 519.0
toggle_mode = true
clip_text = true

[node name="Label" type="Label" parent="lockButton"]
margin_right = 186.0
margin_bottom = 48.0
text = "Enable All Upgrades"
align = 1
valign = 1

[node name="hitboxButton" type="Button" parent="."]
visible = false
margin_left = 569.0
margin_top = 539.0
margin_right = 755.0
margin_bottom = 587.0
toggle_mode = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="hitboxButton"]
margin_right = 186.0
margin_bottom = 48.0
text = "Enable Hitboxes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleText" type="Label" parent="."]
margin_left = 23.0
margin_top = 72.0
margin_right = 1271.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 1575, 607 )
custom_fonts/font = SubResource( 1 )
text = "Amphibia: Calamity Beatdown"
align = 1
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="keyboardControls" type="Label" parent="."]
margin_left = 15.0
margin_top = 350.0
margin_right = 576.0
margin_bottom = 733.0
theme = ExtResource( 2 )
text = "Controls:

Keyboard:

wasd   - movement
k         - light attack
i         - heavy attack
l         -  jump
o,p,j - block
f,q     - run
Double tap wsad - run"

[node name="controllerControls" type="Label" parent="."]
margin_left = 624.0
margin_top = 350.0
margin_right = 1280.0
margin_bottom = 710.0
theme = ExtResource( 2 )
text = "

Controller:

Dpad   - movement
x         - light attack
y         - heavy attack
a         - jump
R1,R2 - block
L1,L2 - run
double tap Dpad - run"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="startButton" to="." method="_on_startButton_pressed"]
[connection signal="toggled" from="lockButton" to="." method="_on_lockButton_toggled"]
[connection signal="toggled" from="hitboxButton" to="." method="_on_hitboxButton_toggled"]
